# discord-woofer-rust

./: Cargo.toml  README.md
assets/: LICENSE  no_reasons.json
src/: main.rs  puppychess.rs  puppygpt.rs  puppyno.rs  puppystonk.rs  puppyweather.rs  puppywhy.rs  utils.rs
